--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <SearchView
-        android:id="@+id/sv_githubUser"
+        android:id="@+id/sv_github_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -18,7 +18,7 @@
         android:queryHint="Username" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_githubUsers"
+        android:id="@+id/rv_github_users"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_row_github_user"
