--- a/app/src/main/res/layout/item_row_github_user.xml
+++ b/app/src/main/res/layout/item_row_github_user.xml
@@ -15,8 +15,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/civ_github_user"
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             tools:src="@tools:sample/avatars" />
 
         <LinearLayout
@@ -30,30 +30,14 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/tv_github_name"
+                    android:id="@+id/tv_github_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#539BF5"
                     android:textStyle="bold"
-                    android:text="@string/name" />
-
-                <TextView
-                    android:id="@+id/tv_github_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="#768390"
-                    android:layout_marginStart="8dp"
+                    android:textSize="24sp"
                     android:text="@string/username" />
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_github_bio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#ADBAC7"
-                android:textStyle="bold"
-                android:layout_marginTop="4dp"
-                android:text="@string/bio" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -66,6 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#768390"
+                    android:textSize="18sp"
                     android:text="@string/location" />
 
                 <TextView
@@ -73,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#768390"
+                    android:textSize="18sp"
                     android:layout_marginStart="8dp"
                     android:text="@string/repositories" />
 
@@ -81,6 +67,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#768390"
+                    android:textSize="18sp"
                     android:layout_marginStart="8dp"
                     android:text="@string/followers"/>
             </LinearLayout>
