--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,111 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     tools:context=".view.activity.DetailActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/civ_github_user_detail"
-            android:layout_width="125dp"
-            android:layout_height="125dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
-            tools:src="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/tv_github_name_detail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textAlignment="center"
-            android:textColor="#ADBAC7"
-            android:textStyle="bold"
-            android:text="@string/name"/>
-
-        <TextView
-            android:id="@+id/tv_github_username_detail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textAlignment="center"
-            android:textColor="#ADBAC7"
-            android:textStyle="bold"
-            android:text="@string/username"/>
-
-        <TextView
-            android:id="@+id/tv_github_bio_detail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:textAlignment="center"
-            android:textColor="#ADBAC7"
-            android:text="@string/bio"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="16dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/civ_github_user_detail"
+                android:layout_width="125dp"
+                android:layout_height="125dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp" />
 
             <TextView
-                android:id="@+id/tv_github_location_detail"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_github_name_detail"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#768390"
-                android:text="@string/location"/>
+                android:layout_marginTop="16dp"
+                android:textAlignment="center"
+                android:textColor="#ADBAC7"
+                android:textStyle="bold"
+                android:text="@string/name"/>
 
             <TextView
-                android:id="@+id/tv_github_repositories_detail"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_github_username_detail"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="#768390"
-                android:layout_marginStart="8dp"
-                android:text="@string/repositories"/>
+                android:layout_marginTop="16dp"
+                android:textAlignment="center"
+                android:textColor="#ADBAC7"
+                android:textStyle="bold"
+                android:text="@string/username"/>
+
+            <TextView
+                android:id="@+id/tv_github_bio_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:textAlignment="center"
+                android:textColor="#ADBAC7"
+                android:text="@string/bio"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_github_location_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#768390"
+                    android:text="@string/location"/>
+
+                <TextView
+                    android:id="@+id/tv_github_repositories_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#768390"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/repositories"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="16dp">
+
+                <TextView
+                    android:id="@+id/tv_github_followers_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#768390"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/followers"/>
+
+                <TextView
+                    android:id="@+id/tv_github_following_detail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#768390"
+                    android:layout_marginStart="8dp"
+                    android:text="@string/following"/>
+            </LinearLayout>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="36dp"/>
 
         </LinearLayout>
 
-        <LinearLayout
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="16dp">
-
-            <TextView
-                android:id="@+id/tv_github_followers_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#768390"
-                android:layout_marginStart="8dp"
-                android:text="@string/followers"/>
-
-            <TextView
-                android:id="@+id/tv_github_following_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#768390"
-                android:layout_marginStart="8dp"
-                android:text="@string/following"/>
-        </LinearLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
