--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -27,24 +27,25 @@
                         android:layout_width="125dp"
                         android:layout_height="125dp"
                         android:layout_gravity="center"
-                        android:layout_marginTop="16dp" />
+                        android:layout_marginTop="16dp"
+                        tools:src="@tools:sample/avatars"/>
 
                     <TextView
                         android:id="@+id/tv_github_name_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="@string/name"
+                        tools:text="@string/name"
                         android:textAlignment="center"
                         android:textColor="#ADBAC7"
-                        android:textStyle="bold" />
+                        tools:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_github_username_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="@string/username"
+                        tools:text="@string/username"
                         android:textAlignment="center"
                         android:textColor="#ADBAC7"
                         android:textStyle="bold" />
@@ -54,7 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        android:text="@string/bio"
+                        tools:text="@string/bio"
                         android:textAlignment="center"
                         android:textColor="#ADBAC7" />
 
@@ -69,7 +70,7 @@
                             android:id="@+id/tv_github_location_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/location"
+                            tools:text="@string/location"
                             android:textColor="#768390" />
 
                         <TextView
@@ -77,7 +78,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            android:text="@string/repositories"
+                            tools:text="@string/repositories"
                             android:textColor="#768390" />
 
                     </LinearLayout>
@@ -93,7 +94,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            android:text="@string/followers"
+                            tools:text="@string/followers"
                             android:textColor="#768390" />
 
                         <TextView
@@ -101,7 +102,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
-                            android:text="@string/following"
+                            tools:text="@string/following"
                             android:textColor="#768390" />
                     </LinearLayout>
 
