--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -23,7 +23,7 @@
                     android:orientation="vertical">
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/civ_github_user_detail"
+                        android:id="@+id/civ_user_detail"
                         android:layout_width="125dp"
                         android:layout_height="125dp"
                         android:layout_gravity="center"
@@ -31,32 +31,36 @@
                         tools:src="@tools:sample/avatars"/>
 
                     <TextView
-                        android:id="@+id/tv_github_name_detail"
+                        android:id="@+id/tv_name_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         tools:text="@string/name"
                         android:textAlignment="center"
-                        android:textColor="#ADBAC7"
+                        android:textColor="#539BF5"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
                         tools:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_github_username_detail"
+                        android:id="@+id/tv_username_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         tools:text="@string/username"
                         android:textAlignment="center"
                         android:textColor="#ADBAC7"
+                        android:textSize="16sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/tv_github_bio_detail"
+                        android:id="@+id/tv_bio_detail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         tools:text="@string/bio"
                         android:textAlignment="center"
+                        android:textSize="14sp"
                         android:textColor="#ADBAC7" />
 
                     <LinearLayout
@@ -67,30 +71,22 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tv_github_location_detail"
+                            android:id="@+id/tv_location_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             tools:text="@string/location"
                             android:textColor="#768390" />
 
                         <TextView
-                            android:id="@+id/tv_github_repositories_detail"
+                            android:id="@+id/tv_repositories_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             tools:text="@string/repositories"
                             android:textColor="#768390" />
 
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:gravity="center">
-
                         <TextView
-                            android:id="@+id/tv_github_followers_detail"
+                            android:id="@+id/tv_followers_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -98,12 +94,13 @@
                             android:textColor="#768390" />
 
                         <TextView
-                            android:id="@+id/tv_github_following_detail"
+                            android:id="@+id/tv_following_detail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
                             tools:text="@string/following"
                             android:textColor="#768390" />
+
                     </LinearLayout>
 
                 </LinearLayout>
