--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,29 +7,26 @@
     tools:context=".view.activity.MainActivity">
 
     <LinearLayout
-        android:id="@+id/nav_host_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.SearchView
-            android:id="@+id/sv_github_user"
+            android:id="@+id/sv_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_github_users"
+            android:id="@+id/rv_users"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_row_user"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"/>
 
     </LinearLayout>
 
