Update to avoid boiler plate code

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -30,7 +30,9 @@
                         app:fabSize="normal"
                         android:contentDescription="@string/favorite"
                         app:layout_anchorGravity="bottom|end"
-                        app:srcCompat="@drawable/baseline_favorite_border_24" />
+                        app:srcCompat="@drawable/baseline_favorite_border_24"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/civ_user_detail"
